--- a/templates/found_stuff.html
+++ b/templates/found_stuff.html
@@ -53,12 +53,14 @@
         <table id = "dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
             <thead>
             <tr role="row">
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Description: activate to sort column ascending">Description</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Current Location: activate to sort column ascending">Current Location</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Date of Finding: activate to sort column ascending">Date of Finding<br>(YYYY-MM-DD)</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Name of Finder: activate to sort column ascending">Name of Finder</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Description: activate to sort column ascending">Description</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Current Location: activate to sort column ascending">Current Location</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Date of Finding: activate to sort column ascending">Date of Finding<br>(YYYY-MM-DD)</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 125.333px;" aria-label="Name of Finder: activate to sort column ascending">Name of Finder</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Contact Info: activate to sort column ascending">Contact Info</th>
                 <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Edit-Update: activate to sort column ascending">Update-Delete</th>
+
             </tr>
             </thead>
             <tbody>
@@ -74,6 +76,11 @@
                             <button type="submit"  class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Go to Profile</button>
                         </a>
                     </td>
+                    <td>
+						<a href="{{ url_for('site.selected_found_stuff', foundId=item[7]) }}">
+                            <button type="button" class="btn btn-info btn-md">Go to Details</button>
+                        </a>
+					</td>
                 </tr>
             {% endfor %}
             </tbody>
